<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    tools:context="com.recoded.inventoryapp.DetailsActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src ="@drawable/ic_launcher_background"/>
        <Button
            android:id="@+id/change_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_image_string"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_string"/>
        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/quantity_text"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/increase_quantity_button"/>
            <EditText
                android:id="@+id/quantity_edit_text"
                android:layout_width="100dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                />
            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/decrease_quantity_button"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_text"/>
        <EditText
            android:id="@+id/price_edit_text"
            android:layout_width="200dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suppiler_number_string"/>
        <EditText
            android:id="@+id/suppiler_edit_text"
            android:layout_width="150dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_string"/>
        <Button
            android:id="@+id/ordermore_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/order_more_string"/>
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/delete_string"/>
    </LinearLayout>

</LinearLayout>
