<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:id="@+id/title_text_view"/>
            <LinearLayout
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:id="@+id/quantity_layout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:id="@+id/quantity_text_view"/>
            </LinearLayout>
            <LinearLayout
                android:layout_above="@id/quantity_layout"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_below="@id/quantity_layout"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$100"
                    android:id="@+id/price_text_view"/>
            </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_button"
                android:id="@+id/order_button"
                android:focusable="false"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>